[workspace]
members = ["crates/*"]

[workspace.dependencies]
flatbuffers = "25.2.10"
s2 = "0.0.13"
osmpbfreader = "0.16"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
geo = "0.26"
log = "0.4"
tempfile = "3.19"
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
