[package]
name = "server"
version = "0.0.0"
edition = "2024"

[dependencies]
flatbuffers = "*"
s2 = "*"
schema = { path = "../schema" }
tonic = "*"
prost = "*"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
log = "*"
env_logger = "*"
anyhow = "*"

[build-dependencies]
tonic-build = "*"