[package]
name = "tilebuild"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbuffers = "25.2.10"
structopt = "0.3.26"
s2 = "*"
schema = { path = "../schema" }
graphviz = { path = "../graphviz" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rayon = "1.8"

[lib]
name = "tilebuild"
path = "src/lib.rs"

[[bin]]
name = "tilebuild"
path = "src/main.rs"
